objects/Order_Product_Item__c.object
<CustomObject>
    <description>Item for each Order Product quantity to store information related to specific quantity item.</description>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Order Product Items (Asset)</relationshipLabel>
        <relationshipName>Order_Product_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Existing_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Existing Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Order Product Items</relationshipLabel>
        <relationshipName>Order_Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Product Items</relationshipLabel>
        <relationshipName>Order_Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <description>Part number related to order product item.</description>
        <label>Part Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <description>Serial number of order product item.</description>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status for order product item.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Spare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver Peak Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Return – Eval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Return – Trade In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Return – Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Return – CPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Return – Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Write-Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete RMA Unit–Supp Transferred–WO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted RMA Unit–Supp Transferred–WO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo / NFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Subscription Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Subscription Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owned Eval/NFR</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Order Product Item</label>
    <nameField>
        <displayFormat>OPI-{000000}</displayFormat>
        <label>Order Product Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Product Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>